// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-AykKC sc-AykKD jBVXWx"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-AykKC sc-AykKD kMXOHC"
>
  foo
</button>
`;
